k8s/06-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: english-assistant
spec:
  selector:
    matchLabels: { app: frontend }
  template:
    metadata:
      labels: { app: frontend }
    spec:
      containers:
        - name: frontend
          image: docker.io/pl1ni0/english-assistant-frontend:latest
          ports: [ { containerPort: 80 } ]
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: english-assistant
spec:
  selector: { app: frontend }
  ports: [ { port: 80, targetPort: 80 } ]
